--- a/vector_field.ipynb
+++ b/vector_field.ipynb
@@ -6,8 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pass"
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
