--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -34,8 +34,8 @@
     "        ydecimal = pos[1] % 1\n",
     "        yint = int(pos[1])\n",
     "        if xint<n-1 and yint<n-1:\n",
-    "            xvel = velfield[xint][yint][0]*xdecimal*ydecimal + velfield[xint+1][yint][0]*(1-xdecimal)*ydecimal + velfield[xint+1][yint+1][0]*(1-xdecimal)*(1-ydecimal) + velfield[xint][yint+1][0]*(1-ydecimal)*xdecimal\n",
-    "            yvel = velfield[xint][yint][1]*xdecimal*ydecimal + velfield[xint+1][yint][1]*(1-xdecimal)*ydecimal + velfield[xint+1][yint+1][1]*(1-xdecimal)*(1-ydecimal) + velfield[xint][yint+1][1]*(1-ydecimal)*xdecimal\n",
+    "            xvel = velfield[xint][yint][0]*(1-xdecimal)*(1-ydecimal) + velfield[xint+1][yint][0]*(xdecimal)*(1-ydecimal) + velfield[xint+1][yint+1][0]*(xdecimal)*(ydecimal) + velfield[xint][yint+1][0]*(ydecimal)*(1-xdecimal)\n",
+    "            yvel = velfield[xint][yint][1]*(1-xdecimal)*(1-ydecimal) + velfield[xint+1][yint][1]*(xdecimal)*(1-ydecimal) + velfield[xint+1][yint+1][1]*(xdecimal)*(ydecimal) + velfield[xint][yint+1][1]*(ydecimal)*(1-xdecimal)   \n",
     "        else:\n",
     "            xvel, yvel = velfield[xint][yint][0], velfield[xint][yint][1]\n",
     "    else:\n",
