--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "n = 50               # Size of velocity field\n",
-    "num_particles = 100  # Number of particles\n",
+    "num_particles = 1  # Number of particles\n",
     "num_steps = 1000     # Number of time steps\n",
     "dt = 0.01            # Time step size\n",
     "velocity_field = np.empty((n, n), dtype=tuple)\n",
-    "velocity_field .fill((0, 0))\n",
+    "velocity_field .fill((1, 0))\n",
     "\n",
     "# Initialize positions randomly within a domain\n",
-    "particle_positions = np.random.rand(num_particles, 2)*n\n",
+    "particle_positions = np.random.rand(num_particles, 2)*(n-1)\n",
     "\n",
     "# Initialize velocities as zeros\n",
     "particle_velocities = np.zeros((num_particles, 2))\n",
@@ -37,7 +37,7 @@
     "            xvel = velfield[xint][yint][0]*(1-xdecimal)*(1-ydecimal) + velfield[xint+1][yint][0]*(xdecimal)*(1-ydecimal) + velfield[xint+1][yint+1][0]*(xdecimal)*(ydecimal) + velfield[xint][yint+1][0]*(ydecimal)*(1-xdecimal)\n",
     "            yvel = velfield[xint][yint][1]*(1-xdecimal)*(1-ydecimal) + velfield[xint+1][yint][1]*(xdecimal)*(1-ydecimal) + velfield[xint+1][yint+1][1]*(xdecimal)*(ydecimal) + velfield[xint][yint+1][1]*(ydecimal)*(1-xdecimal)   \n",
     "        else:\n",
-    "            xvel, yvel = velfield[xint][yint][0], velfield[xint][yint][1]\n",
+    "            xvel, yvel = 0, 0\n",
     "    else:\n",
     "        xvel, yvel = velfield[pos[0]][pos[1]][0], velfield[pos[0]][pos[1]][1]\n",
     "\n",
@@ -49,14 +49,12 @@
     "\n",
     "    # Update particle velocities based on fluid velocity\n",
     "    for i in range(num_particles):\n",
-    "        particle_velocities[i] = get_fluid_velocity(particle_positions[i], velocity_field)\n",
-    "\n",
-    "\n"
+    "        particle_velocities[i] = get_fluid_velocity(particle_positions[i], velocity_field)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
