--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -132,6 +132,283 @@
     "    for i in range(num_particles):\n",
     "        particle_velocities[i] = get_fluid_velocity(particle_positions[i], velocity_field_U, velocity_field_V, x, y)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Exact Lagrangian integrator\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.interpolate import CubicSpline\n",
+    "\n",
+    "n = 50               # Size of velocity field\n",
+    "num_particles = 1    # Number of particles\n",
+    "num_steps = 1000     # Number of time steps\n",
+    "dt = 0.01            # Time step size\n",
+    "L = 2000             # Length of square\n",
+    "\n",
+    "# Initialize positions randomly within a domain\n",
+    "particle_positions = np.random.rand(num_particles, 2)*(n-1)\n",
+    "# Add 0 concentration (for now) to all the particles\n",
+    "zeros_row = np.zeros((1, particle_positions.shape[1]))\n",
+    "particle_positions = np.vstack((particle_positions, zeros_row))\n",
+    "\n",
+    "# Initialize velocities as zeros\n",
+    "particle_velocities = np.zeros((num_particles, 3))\n",
+    "\n",
+    "def get_fluid_velocity(pos, velfield):\n",
+    "\n",
+    "\n",
+    "    interp_u = CubicSpline(x, y, velfieldU)\n",
+    "    interp_v = CubicSpline(x, y, velfieldV)\n",
+    "    xvel = interp_u(pos[0], pos[1])\n",
+    "    yvel = interp_v(pos[0], pos[1])\n",
+    "    conc = 0 #placeholder\n",
+    "\n",
+    "    return (xvel, yvel, conc) \n",
+    "\n",
+    "for step in range(num_steps):\n",
+    "    # Update particle positions\n",
+    "    particle_positions == (particle_positions + particle_velocities * dt) % L\n",
+    "\n",
+    "    # Update particle velocities based on fluid velocity\n",
+    "    for i in range(num_particles):\n",
+    "        particle_velocities[i] = get_fluid_velocity(particle_positions[i], velfield)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def integrate_particle(position, velocity_field, dt, num_steps):\n",
+    "    \"\"\"\n",
+    "    Integrates a Lagrangian particle using Euler's method.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        position (numpy.ndarray): Initial position of the particle.\n",
+    "        velocity_field (function): Time-dependent velocity field function that takes position and time as arguments.\n",
+    "        dt (float): Time step size.\n",
+    "        num_steps (int): Number of integration steps to perform.\n",
+    "    \n",
+    "    Returns:\n",
+    "        numpy.ndarray: Array of particle positions over time.\n",
+    "    \"\"\"\n",
+    "    positions = np.zeros((num_steps+1, len(position)))  # Array to store particle positions\n",
+    "    \n",
+    "    # Set initial position\n",
+    "    positions[0] = position\n",
+    "    \n",
+    "    # Perform integration steps\n",
+    "    for i in range(num_steps):\n",
+    "        time = i * dt  # Current time\n",
+    "        velocity = velocity_field(positions[i], time)  # Get velocity at current position and time\n",
+    "        \n",
+    "        # Update position using Euler's method\n",
+    "        position = position + velocity * dt\n",
+    "        \n",
+    "        # Store updated position\n",
+    "        positions[i+1] = position\n",
+    "    \n",
+    "    return positions\n",
+    "\n",
+    "# Example velocity field: Rossby waves\n",
+    "def velocity_field(position, time):\n",
+    "    x, y, z = position\n",
+    "    \n",
+    "    # Example parameters for Rossby waves\n",
+    "    A = 1.0  # Amplitude\n",
+    "    k = 0.5  # Wave number\n",
+    "    omega = 1.0  # Angular frequency\n",
+    "    \n",
+    "    # Compute velocity components based on Rossby waves\n",
+    "    u = -A * np.sin(k * x) * np.cos(omega * time)\n",
+    "    v = A * np.cos(k * x) * np.sin(omega * time)\n",
+    "    w = 0.0\n",
+    "    \n",
+    "    return np.array([u, v, w])\n",
+    "\n",
+    "# Parameters\n",
+    "initial_position = np.array([0.0, 0.0, 0.0])  # Initial position of the particle\n",
+    "dt = 0.01  # Time step size\n",
+    "num_steps = 1000  # Number of integration steps\n",
+    "\n",
+    "# Integrate the particle\n",
+    "particle_positions = integrate_particle(initial_position, velocity_field, dt, num_steps)\n",
+    "\n",
+    "# Print the resulting positions\n",
+    "print(particle_positions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
+    "\n",
+    "def integrate_particles(positions, concentrations, velocity_field, dt, num_steps):\n",
+    "    \"\"\"\n",
+    "    Integrates Lagrangian particles with concentrations using the unfreezing method.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        positions (numpy.ndarray): Initial positions of the particles. Shape: (num_particles, 3).\n",
+    "        concentrations (numpy.ndarray): Initial concentrations of the particles. Shape: (num_particles,).\n",
+    "        velocity_field (function): Time-dependent velocity field function that takes position and time as arguments.\n",
+    "        dt (float): Time step size.\n",
+    "        num_steps (int): Number of integration steps to perform.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Tuple[numpy.ndarray, numpy.ndarray]: Arrays of particle positions and concentrations over time.\n",
+    "    \"\"\"\n",
+    "    num_particles = len(positions)\n",
+    "    positions_over_time = np.zeros((num_steps+1, num_particles, 3))  # Array to store particle positions\n",
+    "    concentrations_over_time = np.zeros((num_steps+1, num_particles))  # Array to store particle concentrations\n",
+    "    \n",
+    "    # Set initial positions and concentrations\n",
+    "    positions_over_time[0] = positions\n",
+    "    concentrations_over_time[0] = concentrations\n",
+    "    \n",
+    "    # Perform integration steps\n",
+    "    for i in range(num_steps):\n",
+    "        time = i * dt  # Current time\n",
+    "        \n",
+    "        # Freeze the velocity field at current time\n",
+    "        frozen_velocity_field = lambda pos: velocity_field(pos, time)\n",
+    "        \n",
+    "        # Interpolate the velocity field for particle positions\n",
+    "        velocities = interpolate_velocities(positions_over_time[i], frozen_velocity_field)\n",
+    "        \n",
+    "        # Update positions using Euler's method\n",
+    "        positions = positions_over_time[i] + velocities * dt\n",
+    "        \n",
+    "        # Update concentrations using the concentration equation\n",
+    "        divergences = compute_divergences(positions_over_time[i], frozen_velocity_field)\n",
+    "        concentrations = concentrations_over_time[i] - concentrations_over_time[i] * divergences * dt\n",
+    "        \n",
+    "        # Store updated positions and concentrations\n",
+    "        positions_over_time[i+1] = positions\n",
+    "        concentrations_over_time[i+1] = concentrations\n",
+    "    \n",
+    "    return positions_over_time, concentrations_over_time\n",
+    "\n",
+    "def interpolate_velocities(positions, velocity_field):\n",
+    "    \"\"\"\n",
+    "    Interpolates the velocities at given positions using the velocity field.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        positions (numpy.ndarray): Positions of the particles. Shape: (num_particles, 3).\n",
+    "        velocity_field (function): Time-dependent velocity field function.\n",
+    "    \n",
+    "    Returns:\n",
+    "        numpy.ndarray: Interpolated velocities at the given positions. Shape: (num_particles, 3).\n",
+    "    \"\"\"\n",
+    "    num_particles = len(positions)\n",
+    "    velocities = np.zeros((num_particles, 3))\n",
+    "    \n",
+    "    for i in range(num_particles):\n",
+    "        position = positions[i]\n",
+    "        velocity = interpolate_velocity(position, velocity_field)\n",
+    "        velocities[i] = velocity\n",
+    "    \n",
+    "    return velocities\n",
+    "\n",
+    "def interpolate_velocity(position, velocity_field):\n",
+    "    \"\"\"\n",
+    "    Interpolates the velocity at a given position using the velocity field.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        position (numpy.ndarray): Position of the particle.\n",
+    "        velocity_field (function): Time-dependent velocity field function.\n",
+    "    \n",
+    "    Returns:\n",
+    "        numpy.ndarray: Interpolated velocity at the given position.\n",
+    "    \"\"\"\n",
+    "    # Define the coordinate arrays for the velocity field\n",
+    "    x_coords = np.linspace(0, 1, 10)  # Example x coordinates\n",
+    "    y_coords = np.linspace(0, 1, 10)  # Example y coordinates\n",
+    "    z_coords = np.linspace(0, 1, 10)  # Example z coordinates\n",
+    "    \n",
+    "    # Create meshgrid for the coordinate arrays\n",
+    "    x_mesh, y_mesh, z_mesh = np.meshgrid(x_coords, y_coords, z_coords, indexing='ij')\n",
+    "    \n",
+    "    # Get the velocity field values at the meshgrid points\n",
+    "    velocity_field_values = velocity_field((x_mesh, y_mesh, z_mesh))\n",
+    "    \n",
+    "    # Create an interpolator for the velocity field\n",
+    "    interpolator = RegularGridInterpolator((x_coords, y_coords, z_coords), velocity_field_values)\n",
+    "    \n",
+    "    # Interpolate the velocity at the given position\n",
+    "    velocity = interpolator(position)\n",
+    "    \n",
+    "    return velocity\n",
+    "\n",
+    "def compute_divergences(positions, velocity_field):\n",
+    "    \"\"\"\n",
+    "    Computes the divergences of the velocity field at given positions.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        positions (numpy.ndarray): Positions of the particles. Shape: (num_particles, 3).\n",
+    "        velocity_field (function): Time-dependent velocity field function.\n",
+    "    \n",
+    "    Returns:\n",
+    "        numpy.ndarray: Divergences of the velocity field at the given positions. Shape: (num_particles,).\n",
+    "    \"\"\"\n",
+    "    num_particles = len(positions)\n",
+    "    divergences = np.zeros(num_particles)\n",
+    "    \n",
+    "    for i in range(num_particles):\n",
+    "        position = positions[i]\n",
+    "        velocity = velocity_field(position)\n",
+    "        divergence = np.sum(np.gradient(velocity))\n",
+    "        divergences[i] = divergence\n",
+    "    \n",
+    "    return divergences\n",
+    "\n",
+    "# Example velocity field: Rossby waves\n",
+    "def velocity_field(position, time):\n",
+    "    x, y, z = position\n",
+    "    \n",
+    "    # Example parameters for Rossby waves\n",
+    "    A = 1.0  # Amplitude\n",
+    "    k = 0.5  # Wave number\n",
+    "    omega = 1.0  # Angular frequency\n",
+    "    \n",
+    "    # Compute velocity components based on Rossby waves\n",
+    "    u = -A * np.sin(k * x) * np.cos(omega * time)\n",
+    "    v = A * np.cos(k * x) * np.sin(omega * time)\n",
+    "    w = 0.0\n",
+    "    \n",
+    "    return np.array([u, v, w])\n",
+    "\n",
+    "# Parameters\n",
+    "initial_positions = np.array([[0.0, 0.0, 0.0], [1.0, 1.0, 1.0]])  # Initial positions of the particles\n",
+    "initial_concentrations = np.array([1.0, 1.0])  # Initial concentrations of the particles\n",
+    "dt = 0.01  # Time step size\n",
+    "num_steps = 1000  # Number of integration steps\n",
+    "\n",
+    "# Integrate the particles with concentrations\n",
+    "particle_positions, particle_concentrations = integrate_particles(\n",
+    "    initial_positions, initial_concentrations, velocity_field, dt, num_steps\n",
+    ")\n",
+    "\n",
+    "# Print the resulting positions and concentrations\n",
+    "print(\"Particle Positions:\")\n",
+    "print(particle_positions)\n",
+    "print(\"\\nParticle Concentrations:\")\n",
+    "print(particle_concentrations)\n"
+   ]
   }
  ],
  "metadata": {
