analytical_integrator_finished(?)

--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -251,9 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "There are 10 points and 2 values in dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[140], line 143\u001b[0m\n\u001b[0;32m    140\u001b[0m num_steps \u001b[39m=\u001b[39m \u001b[39m1000\u001b[39m  \u001b[39m# Number of integration steps\u001b[39;00m\n\u001b[0;32m    142\u001b[0m \u001b[39m# Integrate the particles with concentrations\u001b[39;00m\n\u001b[1;32m--> 143\u001b[0m particle_positions, particle_concentrations \u001b[39m=\u001b[39m integrate_particles(\n\u001b[0;32m    144\u001b[0m     initial_positions, initial_concentrations, velocity_field, dt, num_steps\n\u001b[0;32m    145\u001b[0m )\n\u001b[0;32m    147\u001b[0m \u001b[39m# Print the resulting positions and concentrations\u001b[39;00m\n\u001b[0;32m    148\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mParticle Positions:\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[140], line 34\u001b[0m, in \u001b[0;36mintegrate_particles\u001b[1;34m(positions, concentrations, velocity_field, dt, num_steps)\u001b[0m\n\u001b[0;32m     31\u001b[0m frozen_velocity_field \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m pos: velocity_field(pos, time)\n\u001b[0;32m     33\u001b[0m \u001b[39m# Interpolate the velocity field for particle positions\u001b[39;00m\n\u001b[1;32m---> 34\u001b[0m velocities \u001b[39m=\u001b[39m interpolate_velocities(positions_over_time[i], frozen_velocity_field)\n\u001b[0;32m     36\u001b[0m \u001b[39m# Update positions using Euler's method\u001b[39;00m\n\u001b[0;32m     37\u001b[0m positions \u001b[39m=\u001b[39m positions_over_time[i] \u001b[39m+\u001b[39m velocities \u001b[39m*\u001b[39m dt\n",
+      "Cell \u001b[1;32mIn[140], line 65\u001b[0m, in \u001b[0;36minterpolate_velocities\u001b[1;34m(positions, velocity_field)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_particles):\n\u001b[0;32m     64\u001b[0m     position \u001b[39m=\u001b[39m positions[i]\n\u001b[1;32m---> 65\u001b[0m     velocity \u001b[39m=\u001b[39m interpolate_velocity(position, velocity_field)\n\u001b[0;32m     66\u001b[0m     velocities[i] \u001b[39m=\u001b[39m velocity\n\u001b[0;32m     68\u001b[0m \u001b[39mreturn\u001b[39;00m velocities\n",
+      "Cell \u001b[1;32mIn[140], line 92\u001b[0m, in \u001b[0;36minterpolate_velocity\u001b[1;34m(position, velocity_field)\u001b[0m\n\u001b[0;32m     89\u001b[0m velocity_field_values \u001b[39m=\u001b[39m velocity_field((x_mesh, y_mesh))\n\u001b[0;32m     91\u001b[0m \u001b[39m# Create an interpolator for the velocity field\u001b[39;00m\n\u001b[1;32m---> 92\u001b[0m interpolator \u001b[39m=\u001b[39m RegularGridInterpolator((x_coords, y_coords), velocity_field_values)\n\u001b[0;32m     94\u001b[0m \u001b[39m# Interpolate the velocity at the given position\u001b[39;00m\n\u001b[0;32m     95\u001b[0m velocity \u001b[39m=\u001b[39m interpolator(position)\n",
+      "File \u001b[1;32mc:\\Users\\guill\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\scipy\\interpolate\\_rgi.py:242\u001b[0m, in \u001b[0;36mRegularGridInterpolator.__init__\u001b[1;34m(self, points, values, method, bounds_error, fill_value)\u001b[0m\n\u001b[0;32m    240\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgrid, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_descending_dimensions \u001b[39m=\u001b[39m _check_points(points)\n\u001b[0;32m    241\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvalues \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_values(values)\n\u001b[1;32m--> 242\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_check_dimensionality(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgrid, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mvalues)\n\u001b[0;32m    243\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfill_value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_fill_value(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mvalues, fill_value)\n\u001b[0;32m    244\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_descending_dimensions:\n",
+      "File \u001b[1;32mc:\\Users\\guill\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\scipy\\interpolate\\_rgi.py:248\u001b[0m, in \u001b[0;36mRegularGridInterpolator._check_dimensionality\u001b[1;34m(self, grid, values)\u001b[0m\n\u001b[0;32m    247\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_check_dimensionality\u001b[39m(\u001b[39mself\u001b[39m, grid, values):\n\u001b[1;32m--> 248\u001b[0m     _check_dimensionality(grid, values)\n",
+      "File \u001b[1;32mc:\\Users\\guill\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\scipy\\interpolate\\_rgi.py:45\u001b[0m, in \u001b[0;36m_check_dimensionality\u001b[1;34m(points, values)\u001b[0m\n\u001b[0;32m     42\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mThe points in dimension \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m must be \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     43\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39m1-dimensional\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m i)\n\u001b[0;32m     44\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m values\u001b[39m.\u001b[39mshape[i] \u001b[39m==\u001b[39m \u001b[39mlen\u001b[39m(p):\n\u001b[1;32m---> 45\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mThere are \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m points and \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m values in \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     46\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39mdimension \u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m (\u001b[39mlen\u001b[39m(p), values\u001b[39m.\u001b[39mshape[i], i))\n",
+      "\u001b[1;31mValueError\u001b[0m: There are 10 points and 2 values in dimension 0"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy.interpolate import RegularGridInterpolator\n",
@@ -273,7 +291,7 @@
     "        Tuple[numpy.ndarray, numpy.ndarray]: Arrays of particle positions and concentrations over time.\n",
     "    \"\"\"\n",
     "    num_particles = len(positions)\n",
-    "    positions_over_time = np.zeros((num_steps+1, num_particles, 3))  # Array to store particle positions\n",
+    "    positions_over_time = np.zeros((num_steps+1, num_particles, 2))  # Array to store particle positions\n",
     "    concentrations_over_time = np.zeros((num_steps+1, num_particles))  # Array to store particle concentrations\n",
     "    \n",
     "    # Set initial positions and concentrations\n",
@@ -338,16 +356,15 @@
     "    # Define the coordinate arrays for the velocity field\n",
     "    x_coords = np.linspace(0, 1, 10)  # Example x coordinates\n",
     "    y_coords = np.linspace(0, 1, 10)  # Example y coordinates\n",
-    "    z_coords = np.linspace(0, 1, 10)  # Example z coordinates\n",
     "    \n",
     "    # Create meshgrid for the coordinate arrays\n",
-    "    x_mesh, y_mesh, z_mesh = np.meshgrid(x_coords, y_coords, z_coords, indexing='ij')\n",
+    "    x_mesh, y_mesh = np.meshgrid(x_coords, y_coords, indexing='ij')\n",
     "    \n",
     "    # Get the velocity field values at the meshgrid points\n",
-    "    velocity_field_values = velocity_field((x_mesh, y_mesh, z_mesh))\n",
+    "    velocity_field_values = velocity_field((x_mesh, y_mesh))\n",
     "    \n",
     "    # Create an interpolator for the velocity field\n",
-    "    interpolator = RegularGridInterpolator((x_coords, y_coords, z_coords), velocity_field_values)\n",
+    "    interpolator = RegularGridInterpolator((x_coords, y_coords), velocity_field_values)\n",
     "    \n",
     "    # Interpolate the velocity at the given position\n",
     "    velocity = interpolator(position)\n",
@@ -378,7 +395,7 @@
     "\n",
     "# Example velocity field: Rossby waves\n",
     "def velocity_field(position, time):\n",
-    "    x, y, z = position\n",
+    "    x, y = position\n",
     "    \n",
     "    # Example parameters for Rossby waves\n",
     "    A = 1.0  # Amplitude\n",
@@ -388,12 +405,11 @@
     "    # Compute velocity components based on Rossby waves\n",
     "    u = -A * np.sin(k * x) * np.cos(omega * time)\n",
     "    v = A * np.cos(k * x) * np.sin(omega * time)\n",
-    "    w = 0.0\n",
     "    \n",
-    "    return np.array([u, v, w])\n",
+    "    return np.array([u, v])\n",
     "\n",
     "# Parameters\n",
-    "initial_positions = np.array([[0.0, 0.0, 0.0], [1.0, 1.0, 1.0]])  # Initial positions of the particles\n",
+    "initial_positions = np.array([[0.0, 0.0], [1.0, 1.0]])  # Initial positions of the particles\n",
     "initial_concentrations = np.array([1.0, 1.0])  # Initial concentrations of the particles\n",
     "dt = 0.01  # Time step size\n",
     "num_steps = 1000  # Number of integration steps\n",
@@ -408,6 +424,116 @@
     "print(particle_positions)\n",
     "print(\"\\nParticle Concentrations:\")\n",
     "print(particle_concentrations)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
+    "\n",
+    "def integrate_particles(positions, concentrations, k, l, A, omega, phi dt, num_steps):\n",
+    "    \"\"\"\n",
+    "    Integrates Lagrangian particles with concentrations using the unfreezing method.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        positions (numpy.ndarray): Initial positions of the particles. Shape: (num_particles, 3).\n",
+    "        concentrations (numpy.ndarray): Initial concentrations of the particles. Shape: (num_particles,).\n",
+    "        velocity_field (function): Time-dependent velocity field function that takes position and time as arguments.\n",
+    "        dt (float): Time step size.\n",
+    "        num_steps (int): Number of integration steps to perform.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Tuple[numpy.ndarray, numpy.ndarray]: Arrays of particle positions and concentrations over time.\n",
+    "    \"\"\"\n",
+    "    num_particles = len(positions)\n",
+    "    positions_over_time = np.zeros((num_steps+1, num_particles, 2))  # Array to store particle positions\n",
+    "    concentrations_over_time = np.zeros((num_steps+1, num_particles))  # Array to store particle concentrations\n",
+    "    \n",
+    "    # Set initial positions and concentrations\n",
+    "    positions_over_time[0] = positions\n",
+    "    concentrations_over_time[0] = concentrations\n",
+    "    \n",
+    "    # Perform integration steps\n",
+    "    for i in range(num_steps):\n",
+    "        time = i * dt  # Current time\n",
+    "        \n",
+    "        velocities = analytical_velocity(positions_over_time[i], k, l, A, omega, phi, i) #returns velocity of all particles at time\n",
+    "        \n",
+    "        # Update positions using Euler's method\n",
+    "        positions = positions_over_time[i] + velocities * dt\n",
+    "        \n",
+    "        # Update concentrations using the concentration equation\n",
+    "        divergences = compute_divergences(positions_over_time[i], velocities, k, l) #change frozen to k,l\n",
+    "        concentrations = concentrations_over_time[i] - concentrations_over_time[i] * divergences * dt\n",
+    "        \n",
+    "        # Store updated positions and concentrations\n",
+    "        positions_over_time[i+1] = positions\n",
+    "        concentrations_over_time[i+1] = concentrations\n",
+    "    \n",
+    "    return positions_over_time, concentrations_over_time\n",
+    "\n",
+    "def analytical_velocity(positions, k, l, A, omega, phi, time):\n",
+    "    \"\"\"\n",
+    "    Interpolates the velocities at given positions using the velocity field.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        positions (numpy.ndarray): Positions of the particles. Shape: (num_particles, 3).\n",
+    "        velocity_field (function): Time-dependent velocity field function.\n",
+    "    \n",
+    "    Returns:\n",
+    "        numpy.ndarray: Interpolated velocities at the given positions. Shape: (num_particles, 3).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    #generate a 2d array with the x and y velocities respectively for an individual point\n",
+    "    def velocity_at_point(x, y, t):\n",
+    "        streamfunction = A * np.exp(1j(k*x + l*y - omega*t + phi))\n",
+    "        u = -1 * streamfunction * 1j * k #dphi/dx should be 0 if phase is random? worth checking\n",
+    "        v = streamfunction * 1j * l\n",
+    "        return np.array((u, v))\n",
+    "\n",
+    "    num_particles = len(positions)\n",
+    "    velocities = np.zeros((num_particles, 2))\n",
+    "    \n",
+    "    for i in range(num_particles):\n",
+    "        position = positions[time][i] # Gives the position of the particle at current time as a 2D array\n",
+    "        velocity = velocity_at_point(position[0], position[1], time) # Gives the x and y axis velocities at the desired time\n",
+    "        velocities[i] = velocity\n",
+    "    \n",
+    "    return velocities\n",
+    "\n",
+    "def compute_divergences(positions, velocities, k, l):\n",
+    "    \"\"\"Returns the divergence value for each particle\"\"\"\n",
+    "    divergences = 1j * k * velocities[0] + 1j * l * velocities[1]\n",
+    "    \n",
+    "    return divergences\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_steps = 2\n",
+    "num_particles = 7\n",
+    "np.zeros((num_steps+1, num_particles, 2))[0]\n",
+    "np.zeros((num_steps+1, num_particles))[1]"
    ]
   }
  ],
