--- a/lagrangian_integrator/lagrangian_integrator.ipynb
+++ b/lagrangian_integrator/lagrangian_integrator.ipynb
@@ -461,13 +461,13 @@
     "    for i in range(num_steps):\n",
     "        time = i * dt  # Current time\n",
     "        \n",
-    "        velocities = analytical_velocity(positions_over_time[i], k, l, A, omega, phi, i) #returns velocity of all particles at time\n",
+    "        velocities = np.real(analytical_velocity(positions_over_time[i], k, l, A, omega, phi, i)) #returns velocity of all particles at time\n",
     "        \n",
     "        # Update positions using Euler's method\n",
     "        positions = positions_over_time[i] + velocities * dt\n",
     "        \n",
     "        # Update concentrations using the concentration equation\n",
-    "        divergences = compute_divergences(positions_over_time[i], velocities, k, l) #change frozen to k,l\n",
+    "        divergences = np.real(compute_divergences(positions_over_time[i], velocities, k, l)) #change frozen to k,l\n",
     "        concentrations = concentrations_over_time[i] - concentrations_over_time[i] * divergences * dt\n",
     "        \n",
     "        # Store updated positions and concentrations\n",
@@ -515,16 +515,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
+    "from scipy.integrate import solve_ivp\n",
+    "\n",
+    "#We expect a velocity field such that velocity_field[i] gives the matrix at time i\n",
+    "\n",
+    "def integrate_particles(positions, concentrations, velocity_field, num_steps, dt):\n",
+    "    \"\"\"\n",
+    "    Integrates Lagrangian particles with concentrations using the unfreezing method.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        positions (numpy.ndarray): Initial positions of the particles. Shape: (num_particles, 2).\n",
+    "        concentrations (numpy.ndarray): Initial concentrations of the particles. Shape: (num_particles,).\n",
+    "        velocity_field (function): Time-dependent velocity field function that takes position and time as arguments.\n",
+    "        dt (float): Time step size.\n",
+    "        num_steps (int): Number of integration steps to perform.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Tuple[numpy.ndarray, numpy.ndarray]: Arrays of particle positions and concentrations over time.\n",
+    "    \"\"\"\n",
+    "    #num_steps = np.shape(velocity_field)[0] - 1 \n",
+    "    num_particles = len(positions)\n",
+    "    positions_over_time = np.zeros((num_steps+1, num_particles, 2))  # Array to store particle positions\n",
+    "    concentrations_over_time = np.zeros((num_steps+1, num_particles))  # Array to store particle concentrations\n",
+    "    \n",
+    "    # Set initial positions and concentrations\n",
+    "    positions_over_time[0] = positions\n",
+    "    concentrations_over_time[0] = concentrations\n",
+    "    \n",
+    "    #use a polynomial to approximate -note that we must ignore phi for this\n",
+    "    #once we have a polynomial we just use solve ivp\n",
+    "\n",
+    "    #1 get u and v matrices using finite differences and gradient\n",
+    "    #2 interpolate for both u and v using a cubic (later might compare cubic to quartic and quadratic)\n",
+    "    #3 solve ivp for u and v cubics (should work even if it is 2D, must check)\n",
+    "    #4 deal with concentration. \n",
+    "    # Probably get matrix of change of concentration at all time points (-cdiv(u,v))\n",
+    "    # actually simpler get div(u,v) in terms of the polynomials for u and v, p(x,y,t) and q(x,y,t) respectively\n",
+    "    # therefore get dc/dt = -c*(dp(x,y,t)/dx + dq(x,y,t)/dy). This can then be solved by ivp (but might be different time steps to position hmm)\n",
+    "    # maybe force the time steps to be the same in both cases\n",
+    "    # record the concentration and position values.\n",
+    "\n",
+    "    u, v = get_matrix_u(velocity_field), get_matrix_v(velocity_field)\n",
+    "    polynomial_u, polynomial_v = interpolate(u), interpolate(v) \n",
+    "    t_span = (0, num_steps * dt)\n",
+    "    t_eval = [i * dt for i in range(num_steps+1)] #should go from 0 to t_span\n",
+    "    positions # should be of form numberofparticles * 2\n",
+    "    y0 = [ [positions[i][0], positions[i][1]] for i in range(num_particles)]\n",
+    "    #y0_list = [\n",
+    "    #    [1, 0],  # Particle 1 initial position [x1, y1]\n",
+    "    #    [2, 0],  # Particle 2 initial position [x2, y2]\n",
+    "    #    [3, 0]   # Particle 3 initial position [x3, y3]\n",
+    "    #]\n",
+    "\n",
+    "    # work out trajectory of each particle or can do all at once in vector form?\n",
+    "    sol = solve_ivp(fun, t_span, y0, t_eval = t_eval)\n",
+    "    positions = sol.y.T\n",
+    "\n",
+    "    for i in range(num_steps):\n",
+    "        positions_over_time[i+1] = positions[i+1]\n",
+    "\n",
+    "    #concentration\n",
+    "    y0conc = [ [concentrations][i], positions[i][0], positions[i][1] for i in range(num_particles)] #returns conc and then pos\n",
+    "    solconc = solve_ivp(funconc, t_span, y0, t_eval = t_eval)\n",
+    "\n",
+    "    return positions_over_time, concentrations_over_time\n",
+    "\n",
+    "\n",
+    "def get_matrix_u(velocity_field):\n",
+    "    umatrix = velocity_field\n",
+    "    nt, nx, ny = velocity_field.shape\n",
+    "    for i in range(nt):\n",
+    "        umatrix[i] = np.gradient(velocity_field[i], axis=1) * -1\n",
+    "    return umatrix\n",
+    "\n",
+    "def get_matrix_v(velocity_field):\n",
+    "    vmatrix = velocity_field\n",
+    "    nt, nx, ny = velocity_field.shape\n",
+    "    for i in range(nt):\n",
+    "        vmatrix[i] = np.gradient(velocity_field[i], axis=0) \n",
+    "    return vmatrix\n",
+    "\n",
+    "def interpolate(umatrix):\n",
+    "    t_vals = np.arange(umatrix.shape[0])\n",
+    "    x_vals = np.arange(umatrix.shape[1])\n",
+    "    y_vals = np.arange(umatrix.shape[2])\n",
+    "    T, X, Y = np.meshgrid(t_vals, x_vals, y_vals, indexing='ij')\n",
+    "    points = np.column_stack([T.ravel(), X.ravel(), Y.ravel()])\n",
+    "    values = umatrix.ravel()\n",
+    "    interpolator = RegularGridInterpolator((t_vals, x_vals, y_vals), values, method='cubic')\n",
+    "    return interpolator\n",
+    "\n",
+    "def fun(t, y):\n",
+    "    #note that here y refers to both x and y coords\n",
+    "    coords = np.array([t, y[0], y[1]])\n",
+    "    dxdt = polynomial_u(coords)\n",
+    "    dydt = polynomial_v(coords)\n",
+    "    return [dxdt, dydt]\n",
+    "\n",
+    "def funconc(t, y):\n",
+    "    y\n",
+    "    \n",
+    "    dcdt = -y[0] * (deriv_poly_u(coords) + deriv_poly_v(coords))\n",
+    "\n",
+    "\n",
+    "    return [dcdt, 0, 0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0.])"
+       "[[0, 1], [0, 1], [0, 1], [0, 1], [0, 1], [0, 1], [0, 1]]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +651,9 @@
     "num_steps = 2\n",
     "num_particles = 7\n",
     "np.zeros((num_steps+1, num_particles, 2))[0]\n",
-    "np.zeros((num_steps+1, num_particles))[1]"
+    "np.zeros((7,2))[0]\n",
+    "positions = [0,1],[0,1],[0,1],[0,1],[0,1],[0,1],[0,1],[0,1]\n",
+    "[ [positions[i][0], positions[i][1]] for i in range(num_particles)]"
    ]
   }
  ],
